# telegram-rss-bot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  dockerhub_push.yml  pre-commit-ci-auto-merge.yml
bot/: __init__.py  __main__.py
bot/config/: reddit.yaml  telegram_channels_filter.yaml  telegram_channels_links.yaml
bot/helper/: reddit_rss_parser.py  telegram_channels_rss_parser.py
bot/helper/ext_utils/: db_handler.py  ollama.py
bot/helper/rss_utils/: reddit.py
bot/helper/telegram_helper/: bot_commands.py  error_handler.py  message_utils.py
bot/modules/: reddit.py  telegram_channels_rss.py
docs/: RSS.md
